# dbt-class

./: README.md  pyproject.toml
northwind/: dbt_project.yml
northwind/models/marts/: fct_product_inventory.sql
northwind/models/raw/seeds/: raw_seeds__extended_products.sql
northwind/models/staging/seeds/: stg_seeds__extended_products.sql
northwind/seeds/: extended_products.csv
