[tool.poetry]
name = "dbt-class"
version = "0.1.0"
description = ""
authors = ["Mateus Schenkel <contameusjogosonline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
